improve range handling, no allocations for common updates

CHANGELOG: Improve performance of small editing actions, e.g. fixing large replace all actions.

BUG: 333517

Differential Revision: https://phabricator.kde.org/D17441